# booknav

./: .gitignore  LICENSE  README.md  booknav.py  epub.py  pyproject.toml  test_cfi.py
.github/workflows/: run-pytest.yml
src/booknav/: __init__.py  booknav.py
test_books/: test.epub
tests/test_booknav/: test_cfi.py
tests/test_booknav/fixtures/: AliceInWonderland_converted.kepub.epub  Frankenstein_converted.kepub.epub
